--- a/src/Mapbender/CoreBundle/Resources/views/Element/layertree.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/layertree.html.twig
@@ -1,3 +1,3 @@
 <div id="{{ id }}" class="mb-element mb-element-layertree">
-    <ul class="layers" ></ul>
+    <ul id="list-root" class="layers" ></ul>
 </div>
