--- a/src/Mapbender/CoreBundle/Resources/public/mapbender.element.legend.css
+++ b/src/Mapbender/CoreBundle/Resources/public/mapbender.element.legend.css
@@ -6,6 +6,10 @@
     display: none;
 }
 
+.mb-element-legend li.notshow {
+    display: none;
+}
+
 .legendicon {
     background: url('icons/legend.png');
     background-repeat: no-repeat;
