some bugfixes; some logic; and a litle of sugar;

--- a/src/Mapbender/ManagerBundle/Resources/views/Element/copyright.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Element/copyright.html.twig
@@ -7,4 +7,10 @@
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.copyright_text) }}{{ form_widget(form.configuration.copyright_text) }}
     <div class="clearContainer"></div>
+    {{ form_label(form.configuration.dialog_link) }}{{ form_widget(form.configuration.dialog_link) }}
+    <div class="clearContainer"></div>
+    {{ form_label(form.configuration.dialog_title) }}{{ form_widget(form.configuration.dialog_title) }}
+    <div class="clearContainer"></div>
+    {{ form_label(form.configuration.dialog_content) }}{{ form_widget(form.configuration.dialog_content) }}
+    <div class="clearContainer"></div>
 </div>
