--- a/src/Mapbender/ManagerBundle/Resources/views/Application/form-layerset.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/form-layerset.html.twig
@@ -29,7 +29,7 @@
     {{ form_rest(form) }}
     <div class="btn-group">    
         <input class="btn" type="submit" value="{{ "Save" | trans }}"/>
-        <button class="btn layerset-action" data-href="{{ path("mapbender_manager_application_edit",{'slug': application.slug}) }}#layers">{{ 'Cansel' | trans}}</button>
+        <button class="btn layerset-action" data-href="{{ path("mapbender_manager_application_edit",{'slug': application.slug}) }}#layers">{{ 'Cancel' | trans}}</button>
     </div>
 </form>
 
