--- a/src/Mapbender/ManagerBundle/Resources/views/Element/about_dialog.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Element/about_dialog.html.twig
@@ -1,5 +1,5 @@
 <div class="elementFormAbout elementForm">
-  {{ form_label(form.title) }}{{ form_widget(form.title) }}
+  {{ form_label(form.title) }}{{ form_widget(form.title, {"attr":{"class":"half"}}) }}
   {{ form_widget(form.configuration.label) }}<label for="{{form.configuration.label.vars.id}}" class="labelCheck">{{"Show button label"|trans}}</label>
   <div class="clearContainer"></div>
   {{ form_label(form.configuration.tooltip) }}{{ form_widget(form.configuration.tooltip) }}
