--- a/src/Mapbender/CoreBundle/Resources/views/Element/printclient.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/printclient.html.twig
@@ -41,6 +41,7 @@
             </div>
             <br>
             <button id="printbutton">Drucken</button>
+            <div class="layers"></div>
         </form>
     </div>
         
