--- a/src/Mapbender/CoreBundle/Resources/views/frontend.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/frontend.html.twig
@@ -1,28 +1,15 @@
-{% extends '::base.html.twig' %}
+{% extends "FOMCoreBundle::skel.html.twig" %}
 
-{% block baseHead %}
-
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <!--[if IE]>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <![endif]-->
-    <title>{% block title %}{% endblock %} - {{ fom.server_name }}</title>
-    <link rel="shortcut icon" href="{{ asset('favicon.ico') }}" />
-{% block head %}{% endblock %}
-
-    <link rel="stylesheet" type="text/css" href="{{ asset('bundles/mapbendercore/reset.css') }}" />
-    <link rel="stylesheet" type="text/css" href="{{ asset('bundles/mapbendercore/mapquery/lib/jquery/themes/base/jquery-ui.css') }}" />
-{% block css %}{% endblock %}
-
+{% block css %}
+  <link rel="stylesheet" type="text/css" href="{{ asset('bundles/mapbendercore/mapquery/lib/jquery/themes/base/jquery-ui.css') }}" />
 {% endblock %}
 
-{% block baseContent %}
-
-{% block content %}{% endblock %}
-
-    <script type="text/javascript" src="{{ asset('bundles/mapbendercore/mapquery/lib/jquery/jquery-1.4.4.js') }}"></script>
-    <script type="text/javascript" src="{{ asset('bundles/mapbendercore/mapquery/lib/jquery/ui/jquery-ui.js') }}"></script>
-{% block js %}{% endblock %}
-
+{% block content %}
+    {% block frontend_content %}{% endblock %}
 {% endblock %}
 
+{% block js %}
+  {{parent()}}
+  <script type="text/javascript" src="{{ asset('bundles/mapbendercore/mapquery/lib/jquery/jquery-1.4.4.js') }}"></script>
+  <script type="text/javascript" src="{{ asset('bundles/mapbendercore/mapquery/lib/jquery/ui/jquery-ui.js') }}"></script>
+{% endblock %}
