--- a/src/Mapbender/CoreBundle/Resources/views/Element/about_dialog.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/about_dialog.html.twig
@@ -1,1 +1,1 @@
-<button id="{{ id }}" class="mb-element mb-element-aboutdialog" title="{{ configuration.tooltip|default(title)|trans }}">{% if configuration.label %}{{ title|trans }}{% endif %}</button>
+<span id="{{ id }}" class="mb-aboutButton icon-about icon-middle" title="{{ configuration.tooltip|default(title)|trans }}">{% if configuration.label %}{{ title|trans }}{% endif %}</span>
