--- a/src/Mapbender/CoreBundle/Resources/views/Element/button.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/button.html.twig
@@ -1,5 +1,5 @@
 {% if configuration.group is defined %}
-    <label for="{{ id }}" title="{{ configuration.tooltip|default(title)|trans }}">{{ title|trans }}</label><input class="mb-element mb-element-button{% if configuration.icon is defined %} {{ configuration.icon }}{% endif %}" type="checkbox" name="mb-button-group[{{ configuration.group }}]" value="{{ id }}" id="{{ id }}"/>
+  <label for="{{ id }}" title="{{ configuration.tooltip|default(title)|trans }}" class="{% if configuration.icon is defined %} icon-middle {{ configuration.icon }}{% endif %}">{% if configuration.label %}{{ title|trans }}{% endif %}</label><input type="checkbox" class="mb-hiddenCheckbox" name="mb-button-group[{{ configuration.group }}]" value="{{ id }}" id="{{ id }}"/>
 {% else %}
-    <button id="{{ id }}" class="mb-element mb-element-button{% if configuration.icon is defined %} {{ configuration.icon }}{% endif %}" title="{{ configuration.tooltip|default(title)|trans }}">{{ title|trans }}</button>
+  <span id="{{ id }}" class="icon-middle {% if configuration.icon is defined %} {{ configuration.icon }}{% endif %}" title="{{ configuration.tooltip|default(title)|trans }}">{% if configuration.label %}{{ title|trans }}{% endif %}</span>
 {% endif %}
