--- a/src/Mapbender/CoreBundle/Resources/views/Template/fullscreen.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Template/fullscreen.html.twig
@@ -4,36 +4,48 @@
 
 {# TODO: Use controller for app.debug, else use dumped assets #}
 {% block css %}
-    <link rel="stylesheet" type="text/css" href="{{ path('mapbender_core_application_assets', {'slug': application.slug, 'type': 'css'}) }}" />
-{% endblock %}
-    
-{% block js %}
-    <script type="text/javascript" src="{{ path('mapbender_core_application_assets', {'slug': application.slug, 'type': 'js'}) }}"></script>
+  {#<link rel="stylesheet" type="text/css" href="{{ path('mapbender_core_application_assets', {'slug': application.slug, 'type': 'css'}) }}" />#}
+  <link rel="stylesheet" href="{{ asset('bundles/fomcore/css/frontend/fullscreen.css') }}">
 {% endblock %}
 
-{% block content %}
-<div id="top" class="region">
-{% if application.elements.top is defined %}
-{% for element in application.elements.top %}
-    {{ element.render() | raw }}
-{% endfor %}
-{% endif %}
-</div>
-<div id="content" class="region">
-{% if application.elements.content is defined %}
-{% for element in application.elements.content %}
-    {{ element.render() | raw }}
-{% endfor %}
-{% endif %}
-</div>
-<div id="footer" class="region">
-{% if application.elements.footer is defined %}
-{% for element in application.elements.footer %}
-    {{ element.render() | raw }}
-{% endfor %}
-{% endif %}
-</div>
-<script type="text/javascript">
+{% block js %}
+  {{parent()}}
+  <script type="text/javascript" src="{{ path('mapbender_core_application_assets', {'slug': application.slug, 'type': 'js'}) }}"></script>
+{% endblock %}
+
+{% block frontend_content %}
+  <div id="sidepane" class="sidePane left">
+    <ul class="sidePaneTabs">
+      <li class="sidePaneTabItem">A</li>
+      <li class="sidePaneTabItem">B</li>
+      <li class="sidePaneTabItem">C</li>
+    </ul>
+    <div class="sideContent">
+      {% if application.elements.sidepane is defined %}
+        {% for element in application.elements.sidepane %}
+          {{ element.render() | raw }}
+        {% endfor %}
+      {% endif %}
+    </div>
+  </div>
+
+  <div id="content" class="contentPane">
+    <ul id="toolbar" class="toolBar itemsRight">
+      {% if application.elements.toolbar is defined %}
+        {% for element in application.elements.toolbar %}
+          <li class="toolBarItem">{{ element.render() | raw }}</li>
+        {% endfor %}
+      {% endif %}
+    </ul>
+
+    {% if application.elements.content is defined %}
+      {% for element in application.elements.content %}
+        {{ element.render() | raw }}
+      {% endfor %}
+    {% endif %}
+  </div>
+  <script type="text/javascript">
     var Mapbender = Mapbender || {};
-    Mapbender.configuration = {{ application.configuration | raw }}</script>
+    Mapbender.configuration = {{ application.configuration | raw }}
+  </script>
 {% endblock %}
