add font icons, make some textchanges, bugfixes

--- a/src/Mapbender/ManagerBundle/Resources/views/Application/actions.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/actions.html.twig
@@ -5,7 +5,7 @@
             'url': url('mapbender_manager_application_new'),
             'title': 'Create new application',
             'attr': {
-                'class': 'addIcon right'
+                'class': 'iconAdd iconBig right'
             }
         }
     }
