--- a/src/Mapbender/ManagerBundle/Resources/views/Application/form-layersets.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/form-layersets.html.twig
@@ -1,5 +1,5 @@
 <label for="inputFilterLayersets" class="labelInput left">{{"Filter layersets"|trans}}</label><input id="inputFilterLayersets" type="text" class="input listFilterInput">
-<a href="{{ path("mapbender_manager_application_newlayerset",{'slug': application.slug}) }}" class="addIcon right addLayerset" title="{{ 'Add Layerset' | trans}}"></a>
+<a href="{{ path("mapbender_manager_application_newlayerset",{'slug': application.slug}) }}" class="iconAdd right addLayerset iconBig" title="{{ 'Add Layerset' | trans}}"></a>
 <div class="clearContainer"></div>
 
 <ul id="listFilterLayersets" class="listFilterContainer clear listFilterBoxes listFilterServiceBoxes">
