--- a/src/Mapbender/ManagerBundle/Resources/views/Application/form-security.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/form-security.html.twig
@@ -1,4 +1,4 @@
-<a id="addPermission" href="{{path('fom_user_acl_overview')}}" class="addIcon right" title="{{'Add users and groups'|trans}}"></a>
+<a id="addPermission" href="{{path('fom_user_acl_overview')}}" class="iconAdd iconBig right" title="{{'Add users and groups'|trans}}"></a>
 {{ form_widget(form.published) }}<label for="{{form.published.vars.id}}" class="labelCheck">{{"Publish"|trans}}</label>
 <div class="clearContainer"></div>
 {{ form_widget(form.acl) }}
