add footer to fullscreen template, do some design and bugfixes, add sidebar markup

--- a/src/Mapbender/CoreBundle/Resources/views/Template/fullscreen.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Template/fullscreen.html.twig
@@ -5,20 +5,31 @@
 {# TODO: Use controller for app.debug, else use dumped assets #}
 {% block css %}
   {#<link rel="stylesheet" type="text/css" href="{{ path('mapbender_core_application_assets', {'slug': application.slug, 'type': 'css'}) }}" />#}
+  <link rel="stylesheet" href="{{ asset('bundles/fomcore/css/frontend/mapbender3_theme.css') }}">
   <link rel="stylesheet" href="{{ asset('bundles/fomcore/css/frontend/fullscreen.css') }}">
 {% endblock %}
 
 {% block js %}
   {{parent()}}
   <script type="text/javascript" src="{{ path('mapbender_core_application_assets', {'slug': application.slug, 'type': 'js'}) }}"></script>
+  <script type="text/javascript" src="{{ asset('bundles/fomcore/js/frontend/components.js') }}"></script>
 {% endblock %}
-
 {% block frontend_content %}
-  <div id="sidepane" class="sidePane left">
+  <div class="logoContainer">
+    <img class="logo" height="80" alt="Mapbender 3 Manager" src="{{ asset(fom.server_logo)}}" />
+  </div>
+
+  <ul id="toolbar" class="toolBar itemsRight top">
+    {% if application.elements.toolbar is defined %}
+      {% for element in application.elements.toolbar %}
+        <li class="toolBarItem">{{ element.render() | raw }}</li>
+      {% endfor %}
+    {% endif %}
+  </ul>
+
+  <div id="sidepane" class="clear sidePane left opened">
     <ul class="sidePaneTabs">
-      <li class="sidePaneTabItem">A</li>
-      <li class="sidePaneTabItem">B</li>
-      <li class="sidePaneTabItem">C</li>
+      <li class="sidePaneTabItem toggleSideBar"></li>
     </ul>
     <div class="sideContent">
       {% if application.elements.sidepane is defined %}
@@ -30,20 +41,21 @@
   </div>
 
   <div id="content" class="contentPane">
-    <ul id="toolbar" class="toolBar itemsRight">
-      {% if application.elements.toolbar is defined %}
-        {% for element in application.elements.toolbar %}
-          <li class="toolBarItem">{{ element.render() | raw }}</li>
-        {% endfor %}
-      {% endif %}
-    </ul>
-
     {% if application.elements.content is defined %}
       {% for element in application.elements.content %}
         {{ element.render() | raw }}
       {% endfor %}
     {% endif %}
   </div>
+
+  <ul id="footer" class="toolBar itemsRight bottom">
+    {% if application.elements.footer is defined %}
+      {% for element in application.elements.footer %}
+        <li class="toolBarItem">{{ element.render() | raw }}</li>
+      {% endfor %}
+    {% endif %}
+  </ul>
+
   <script type="text/javascript">
     var Mapbender = Mapbender || {};
     Mapbender.configuration = {{ application.configuration | raw }}
