--- a/src/Mapbender/ManagerBundle/Resources/views/Application/index.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/index.html.twig
@@ -38,7 +38,11 @@
             {% endif %}
 
             {% if application.source is constant('Mapbender\\CoreBundle\\Entity\\Application::SOURCE_DB') and is_granted('DELETE', application) %}
-              <a class="iconRemove iconBig" href="{{path('mapbender_manager_application_delete', { 'slug': application.slug }) }}" title="{{ 'Delete application' | trans }} {{ application.title }}"></a>
+              <span class="iconRemove iconBig"  
+                title="{{ 'Delete application' | trans }} {{ application.title }}"
+                data-url="{{ path('mapbender_manager_application_delete', { 'slug': application.slug}) }}" 
+                data-slug="{{ application.slug }}"
+              ></span>
             {% endif %}
           </div>
         </div>
