--- a/src/Mapbender/ManagerBundle/Resources/views/Element/select.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Element/select.html.twig
@@ -1,7 +1,7 @@
 {% for class, meta in elements %}
 <a class="checkContainer chooseElement" data-tags="{{ meta.tags | join(',') | lower }}" title="Choose {{meta.title}} Element" href="{{ path('mapbender_manager_element_new', {'slug': app.request.get('slug'), 'class': class, 'region': region}) }}">
     <span class="subTitle">{{ meta.title | trans }}</span>
-    <span class="checkedIcon"></span>
+    <span class="iconOk iconBig"></span>
     <div class="description">{{ meta.description | trans }}</div>
     <div class="clearContainer"></div>
 </a>
