--- a/src/Mapbender/ManagerBundle/Resources/views/Element/yaml-form.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Element/yaml-form.html.twig
@@ -1,5 +1,8 @@
-{{ form_row(form.configuration) }}
-<p>{% trans with {'%locale%': app.request.locale} %}
-Use the <a href="http://www.wikipedia.org/search-redirect.php?search=yaml&language=%locale%">YAML</a> format to describe the element's configuration.
-{% endtrans %}</p>
-
+<div class="elementFormYaml elementForm">
+    <div class="messageBox hint">
+      {% trans with {'%locale%': app.request.locale} %}
+      Use the <a class="linkButton" href="http://www.wikipedia.org/search-redirect.php?search=yaml&language=%locale%">YAML</a> format to describe the element's configuration.{% endtrans %}
+    </div>
+    {{ form_label(form.configuration) }}
+    {{ form_widget(form.configuration) }}
+</div>
