--- a/src/Mapbender/ManagerBundle/Resources/views/Element/map.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Element/map.html.twig
@@ -10,11 +10,35 @@
     {{ form_label(form.configuration.units) }}{{ form_widget(form.configuration.units) }}
     <div class="clearContainer"></div>
     <label class="labelInput">{{"Max. extent"|trans}}</label>
-    
-    {{ form_widget(form.configuration.extent_max) }}
-
+    <div class="singleRow">
+        {{form_label(form.configuration.extent_max.0)}}
+        {{form_widget(form.configuration.extent_max.0)}}
+        {{form_label(form.configuration.extent_max.1)}}
+        {{form_widget(form.configuration.extent_max.1)}}
+    </div>
     <div class="clearContainer"></div>
-    {{ form_label(form.configuration.extent_start) }}{{ form_widget(form.configuration.extent_start) }}
+    <div class="singleRow">
+        {{form_label(form.configuration.extent_max.2)}}
+        {{form_widget(form.configuration.extent_max.2)}}
+        {{form_label(form.configuration.extent_max.3)}}
+        {{form_widget(form.configuration.extent_max.3)}}
+    </div>
+    <div class="clearContainer"></div>
+    <label class="labelInput">{{"Start. extent"|trans}}</label>
+    <div class="singleRow">
+        {{form_label(form.configuration.extent_start.0)}}
+        {{form_widget(form.configuration.extent_start.0)}}
+        {{form_label(form.configuration.extent_start.1)}}
+        {{form_widget(form.configuration.extent_start.1)}}
+    </div>
+    <div class="clearContainer"></div>
+    <div class="singleRow">
+        {{form_label(form.configuration.extent_start.2)}}
+        {{form_widget(form.configuration.extent_start.2)}}
+        {{form_label(form.configuration.extent_start.3)}}
+        {{form_widget(form.configuration.extent_start.3)}}
+    </div>
+
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.scales) }}{{ form_widget(form.configuration.scales) }}
     <div class="clearContainer"></div>
