--- a/src/Mapbender/ManagerBundle/Resources/views/Application/form-elements.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/form-elements.html.twig
@@ -22,10 +22,8 @@
               ({{element.id}}) {{ element.title }}
             </span>
             <span class="type">{{ element_class_title(element) }}</span>
-            <div class="btn-group">
-              <a href="{{ path('mapbender_manager_element_edit', {'slug': application.slug, 'id': element.id})}}" class="btn">{{ 'Edit' | trans }}</a>
-              <a href="{{ path('mapbender_manager_element_confirmdelete', {'slug': application.slug, 'id': element.id}) }}" class="btn btn-warning">{{ 'Delete' | trans }}</a>
-            </div>
+            <span class="iconEdit" data-url="{{ path('mapbender_manager_element_edit', {'slug': application.slug, 'id': element.id})}}"></span>
+            <span class="iconRemove"  data-id="{{ element.id }}" data-slug="{{ application.slug }}" data-url="{{ path('mapbender_manager_element_confirmdelete', {'slug': application.slug, 'id': element.id}) }}"></span>
           </li>
           {% endfor %}
         </ul>
