--- a/src/Mapbender/ManagerBundle/Resources/views/Application/form-elements.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/form-elements.html.twig
@@ -1,32 +1,41 @@
 {{ form_label(form.template) }}{{ form_widget(form.template) }}
 
 <!-- XXXVH Awesome templating engine plzzz!-->
-<div class="layout">
-  {% for region in regions %}
-    <div class="{{region}}">
-      <h3 class="subTitle">{{ region | capitalize }}</h3>
-      <a href="{{ url('mapbender_manager_element_select', { 'slug': application.slug, 'region': region }) }}" class="iconAdd iconBig right addElement" title="{{'Add new element'|trans}}"></a>
-
-      <div class="elementsheader">
-        <span class="title">{{ '(Id) Title' | trans }}</span>
-        <span class="type">{{ 'Type' | trans }}</span>
-        <span class="actions">{{ 'Actions' | trans }}</span>
-      </div>
-
-      <ul class="elements" data-region="{{ region }}">
-        <li class="dummy"></li>
-        {% for element in application.getElementsByRegion(region) %}
-          <li class="element" data-id="{{element.id}}" data-href="{{ path('mapbender_manager_element_weight', {'id': element.id})}}">
-            <span class="title">
-              <input data-href="{{ path('mapbender_manager_element_enable', { 'id': element.id })}}" data-id="{{ element.id }}" type="checkbox" {% if element.enabled %} checked="checked" {% endif %} />
-              ({{element.id}}) {{ element.title }}
-            </span>
-            <span class="type">{{ element_class_title(element) }}</span>
-            <span class="iconEdit" data-url="{{ path('mapbender_manager_element_edit', {'slug': application.slug, 'id': element.id})}}"></span>
-            <span class="iconRemove"  data-id="{{ element.id }}" data-slug="{{ application.slug }}" data-url="{{ path('mapbender_manager_element_confirmdelete', {'slug': application.slug, 'id': element.id}) }}"></span>
-          </li>
+{% for region in regions %}
+  <div class="clearContainer"></div>
+  <div class="{{region}} region">
+    <h3 class="left subTitle">{{ region | capitalize }}</h3>
+    <a href="{{ url('mapbender_manager_element_select', { 'slug': application.slug, 'region': region }) }}" class="iconAdd iconBig right addElement" title="{{'Add new element'|trans}}"></a>
+    <div class="clearContainer"></div>
+    {% if application.getElementsByRegion(region)|length > 0 %}
+      <table class="elementsTable tableCore" data-region="{{ region }}">
+        <thead id="permissionsHead">
+          <tr>
+            <th></th>
+            <th>{{ 'Title' | trans }}</th>
+            <th class="type">{{ 'Type' | trans }}</th>
+            <th></th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for element in application.getElementsByRegion(region) %}
+            <tr class="element" data-id="{{element.id}}" data-href="{{ path('mapbender_manager_element_weight', {'id': element.id})}}">
+              <td>
+                <div class="checkWrapper left iconCheckbox {% if element.enabled %}iconCheckboxActive{% endif %}">
+                  <input class="checkbox" type="checkbox" data-href="{{ path('mapbender_manager_element_enable', { 'id': element.id })}}" data-id="{{ element.id }}" type="checkbox" {% if element.enabled %} checked="checked" {% endif %}>
+                </div>
+              </td>
+              <td class="description">{{ element.title }}</td>
+              <td class="description">{{ element_class_title(element) }}</td>
+              <td class="iconEdit" data-url="{{ path('mapbender_manager_element_edit', {'slug': application.slug, 'id': element.id})}}"></td>
+              <td class="iconRemove" data-id="{{ element.id }}" data-slug="{{ application.slug }}" data-url="{{ path('mapbender_manager_element_confirmdelete', {'slug': application.slug, 'id': element.id}) }}"></td>
+            </tr>
           {% endfor %}
-        </ul>
-    </div>
-  {% endfor %}
-</div>
+        </tbody>
+      </table>
+    {% else %}
+      <p class="description">No elements added.</p>
+    {% endif %}
+  </div>
+{% endfor %}
