--- a/src/Mapbender/ManagerBundle/Resources/views/Application/form-elements.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/form-elements.html.twig
@@ -11,25 +11,23 @@
       <table class="elementsTable tableCore" data-region="{{ region }}">
         <thead id="permissionsHead">
           <tr>
-            <th></th>
             <th>{{ 'Title' | trans }}</th>
             <th class="type">{{ 'Type' | trans }}</th>
-            <th></th>
             <th></th>
           </tr>
         </thead>
         <tbody>
           {% for element in application.getElementsByRegion(region) %}
             <tr class="element" data-id="{{element.id}}" data-href="{{ path('mapbender_manager_element_weight', {'id': element.id})}}">
-              <td>
+              <td class="description">{{ element.title }}</td>
+              <td class="description">{{ element_class_title(element) }}</td>
+              <td class="iconColumn">
                 <div class="checkWrapper left iconCheckbox {% if element.enabled %}iconCheckboxActive{% endif %}">
                   <input class="checkbox" type="checkbox" data-href="{{ path('mapbender_manager_element_enable', { 'id': element.id })}}" data-id="{{ element.id }}" type="checkbox" {% if element.enabled %} checked="checked" {% endif %}>
                 </div>
+                <span class="iconEdit" data-url="{{ path('mapbender_manager_element_edit', {'slug': application.slug, 'id': element.id})}}"></span>
+                <span class="iconRemove" data-id="{{ element.id }}" data-slug="{{ application.slug }}" data-url="{{ path('mapbender_manager_element_confirmdelete', {'slug': application.slug, 'id': element.id}) }}"></span>
               </td>
-              <td class="description">{{ element.title }}</td>
-              <td class="description">{{ element_class_title(element) }}</td>
-              <td class="iconEdit" data-url="{{ path('mapbender_manager_element_edit', {'slug': application.slug, 'id': element.id})}}"></td>
-              <td class="iconRemove" data-id="{{ element.id }}" data-slug="{{ application.slug }}" data-url="{{ path('mapbender_manager_element_confirmdelete', {'slug': application.slug, 'id': element.id}) }}"></td>
             </tr>
           {% endfor %}
         </tbody>
